# physAI-Final

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: start_system.sh  start_turtlebot3.sh  start_vnc.sh
ros2_ws/: ai_config.json  package.xml  setup.py
ros2_ws/resource/: physics_ai
ros2_ws/src/physics_ai/: __init__.py  gemini_json_publisher.py  json_command_interpreter.py
src/: .env_example  gemini_json_publisher.py  json_command_interpreter.py  prompt.txt
